# division_math

./: Cargo.toml  build.rs
src/: lib.rs  math.rs  matrix4x4.rs  vector2.rs  vector3.rs  vector4.rs
src/simd/: mod.rs  neon.rs
tests/: math_tests.rs  matrix4x4_tests.rs  profile.rs  vector3_tests.rs  vector4_tests.rs  vector_tests.rs
