[package]
name = "division_math"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
itertools = "0.10.5"

[profile.relwithdebug]
inherits="release"
debug=true

[features]
enable_simd = []
